Fix tftpboot which was broken by my botched WARNSfy in last year. Also add comments that mention libsa tftp requires network device socket in f_devdata in struct open_file, from spz@ in PR port-sparc64/46652. Briefly tested tftpboot and nfsboot on Ultra5.